config/external-dns.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
  namespace: kube-system
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: external-dns
  template:
    metadata:
      labels:
        app: external-dns
    spec:
      serviceAccountName: external-dns-sa
      containers:
      - name: external-dns
        image: us.gcr.io/k8s-artifacts-prod/external-dns/external-dns:v0.7.2
        args:
        - "--log-level=debug"
        - "--source=service\ningress"
        - "--provider=google"
        - "--domain-filter=$(DOMAIN_NAME)"
        - "--registry=txt"
        - "--txt-owner-id=kctf-cloud-dns"
